fix: token page doesn't shift

--- a/apps/web/src/app/(token)/[address]/[id]/page.module.css
+++ b/apps/web/src/app/(token)/[address]/[id]/page.module.css
@@ -1,3 +1,7 @@
+.grid {
+  min-height: var(--content-height);
+}
+
 .image {
   object-fit: contain;
   object-position: top;
