--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -2,6 +2,7 @@
 
 :root {
   --header-height: 80px;
+  --content-height: calc(100vh - var(--header-height));
 }
 
 body {
