--- a/apps/web/src/components/container/container.module.css
+++ b/apps/web/src/components/container/container.module.css
@@ -1,3 +1,3 @@
 .main {
-  min-height: calc(100vh - var(--header-height));
+  min-height: var(--content-height);
 }
